--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "around-react_es",
+  "name": "gym-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && scp -r ./build/* aldo.desarrollointerno.com:/home/aldoaccs/react-around-api-full_es/frontend"
+    "deploy": "npm run build && scp -r ./build/* boukenshagym.boukensha.site:/home/aldoaccs//Gym-App__frontend/frontend"
   },
   "eslintConfig": {
     "extends": [
